--- a/index.html
+++ b/index.html
@@ -46,18 +46,20 @@
                 <div class="content">
                     <!-- main content -->
                     <div class="content-details">
-                        <h1>Last Chance!</h1>
-                        <h1>We're going to MARS...</h1>
-                        <p class="description">
-                            We've seen enough of this crazy, mixed-up planet so and we're gettin outta here!
-                            Good news though - we have enough room to take a few lucky humans with us. If you would like
-                            to be saved, act fast and leave your email so we can track and microchip you before it's too
-                            late! Terms and conditions apply.
+                        <h1>We're Going to Mars..</h1>
+                        <h1>Last Chance!!</h1>
+                        <p>
+                            We've had enough of this planet, these Earth-lings are CRAZY...and we thought the
+                            Draconians and Anunnaki we're bad! Have no fear though humans, there's room to take a few of
+                            you lucky
+                            apes with us! If you would like to be saved, please leave your email so we can proceed to
+                            microchip and track you before
+                            it's too late! Terms and conditions will most certainly apply.
                         </p>
                         <!-- box and button  -->
-                        <div class="search">
-                            <input type="text" class="search-box" placeholder="Your email address">
-                            <input type="button" class="search-btn" value="Let's Go!">
+                        <div class="email">
+                            <input type="text" class="email-box" placeholder="Your email address">
+                            <input type="button" class="email-btn" value="Let's Go!">
                         </div>
                         <!-- social-media links -->
                         <div class="social-links">
