added README, added example screenshot .gifs, removed unused footer section and main.js script

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     </head>
 
     <body>
-        <!---------- 
-        LANDING PAGE 
-        ----------->
+        <!----------------- 
+        H E A D E R + N A V 
+        ------------------>
         <header>
             <div class="container">
                 <nav class="nav">
@@ -37,26 +37,26 @@
                 </nav>
             </div>
         </header>
-        <!----------
-        MAIN section 
-        ----------->
+        <!-------------
+        M A I N content 
+        -------------->
 
         <section class="main" id="hero">
             <div class="container">
                 <div class="content">
-                    <!-- main content -->
+                    <!-- header -->
                     <div class="content-details">
                         <h1>We're Going to Mars..</h1>
                         <h1>Last Chance!!</h1>
                         <p>
-                            We've had enough of this planet, these Earth-lings are CRAZY...and we thought the
+                            We've had enough of this planet, these Earthlings are CRAZY...and we thought the
                             Draconians and Anunnaki we're bad! Have no fear though humans, there's room to take a few of
                             you lucky
                             apes with us! If you would like to be saved, please leave your email so we can proceed to
                             microchip and track you before
                             it's too late! Terms and conditions will most certainly apply.
                         </p>
-                        <!-- box and button  -->
+                        <!-- input for email and email button  -->
                         <div class="email">
                             <input type="text" class="email-box" placeholder="Your email address">
                             <input type="button" class="email-btn" value="Let's Go!">
@@ -77,10 +77,9 @@
                             </a>
                         </div>
                     </div>
-                    <!-- animated alien image -->
-                    <!-- CREDIT https://undraw.co/ -->
+                    <!-- SVG for animated alien image from https://undraw.co -->
                     <div class="image-group">
-                        <svg viewBox="0 0 673 739" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg viewBox="0 0 673 739" fill="none" xmlns="http://www.w3.org/2000/svg" width="100%">
                             <g id="alien-abduction" clip-path="url(#clip0)">
                                 <g id="alien2">
                                     <path id="Vector"
@@ -226,13 +225,6 @@
                 </div>
             </div>
         </section>
-        <!-------------
-        FOOTER section 
-        -------------->
-        <footer>
-        </footer>
-
-        <script src="main.js"> </script>
     </body>
 
 </html>
